# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qarray"
version = "0.0.01"
description = ""
readme = "README.md"
authors = [
    'Barnaby van Straaten'
]
license = "MIT"
repository = "https://github.com/b-vanstraaten/qarray"
homepage = "https://github.com/b-vanstraaten/qarray"
keywords = [
]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
]