[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "qarray"
authors = [{ name = "Barnaby van Straaten", email = "barnaby.vanstraaten@kellogg.ox.ac.uk" }]
readme = "pypi_README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    'qarray-rust-core==1.2.0',
    'osqp==0.6.3',
    'numpy>=1.26',
    'pydantic>=2.3',
    'scipy>=1.11',
    'matplotlib>=3.8',
    'loguru>=0.5',
    'jax>=0.2',
    'jaxopt>=0.4',
    'tqdm>=4.62',
]


[project.urls]
Home = "https://github.com/b-vanstraaten/qarray"
